# py-templater

./: .gitignore  Makefile  README.md  REQUIREMENT.md  docker-compose-dev.yml  docker-compose-prod.yml
scripts/benchmark/: locustfile.py
scripts/profile/: profiler.py
src/: Dockerfile  pyproject.toml
src/app/: main.py
src/app/core/: common.py
src/app/models/: nlargest.py
src/app/utils/: settings.py
src/config/: env
src/tests/: conftest.py  test_main.py
