[tool.poetry]
name = "find-top-n-elements"
version = "0.1.0"
description = "Project Dependency"
authors = ["wuhsuan_lin"]
readme = "README.md"
packages = [{include = "find_top_n_elements"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
gunicorn = "^20.1.0"
base = "^0.0.0"
fastapi-profiler = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.1"
pylint = "^2.17.4"
locust = "^2.15.1"
memory-profiler = "^0.61.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
